css/legal.css
        html, body {
		    max-width: 100%;
		    /* height: 100%; */
		    overflow-x: hidden;	        
            font-family: 'Roboto', sans-serif;
            color: #000;
            font-weight: 300;
        }

		h1,h2,h3,h4,h5,h6 {
		    color: #333;
		    font-weight: 300;
		}

        h3 {
            margin-bottom: 1rem;
        }
        
        a {
            color: #0653a7;
        }

        .navbar {
            padding: 0;
            color: #c3ac50;
            font-weight: 200;
            border-bottom: 0.1rem solid #bbb18d;
        }

        .navbar h1 {
            margin: 0;
        }

        img {
            max-width: 100%;
        }

        #content {
            margin-top: 2rem;
        }

        .logo {
            font-size: 2rem;
            color: #a99549;
            font-weight: 300;
        }

        .logo img {
            width: 7rem;
        }

        .logo b {
            font-weight: 400;
        }        
        
		pre {
			background-color: #f7f7f7;
			box-shadow: 0 2px 4px rgba(0,0,0,.15),0 0 3px rgba(0,0,0,.15);
			padding: .99em;
			overflow-x: auto;
			white-space: pre;
			font-size: .95em;
			line-height: 1.8em;
		}
		
		code{
			background-color: #f7f7f7;
			padding: .2em;	
		}
		
        .container {
            padding: 0;
        }

        .btn-primary:not([href]):not([tabindex]),
        .btn-primary:not([href]):not([tabindex]):visited {
            color: #fff;
            background-color: #744f92;
            border-color: #54356d;
        }

        .btn-primary:not([href]):not([tabindex]):active,
        .btn-primary:not([href]):not([tabindex]):hover {
            color: #fff;
            background-color: #4d2e66;
            border-color: #54356d;
        }

        a {
            color: #203990;
        }

        .sticky-top {
            background: #fff;
            border-bottom: 1px solid #c7b9d4;
        }

        .navbar-brand {
            font-size: 2.2rem;
            line-height: 2.2rem;
            font-weight: 200;
        }

        .navbar {
            padding: 0;
            color: #c3ac50;
            font-weight: 200;
            border-bottom: 0.1rem solid #bbb18d;
        }

        .navbar #logo {
            width: 12rem;
            margin-right: 0.2rem;
            padding-left: 0.37rem;
        }
        
        .nav-link{padding-left: .5rem !important;}

        .header #text {
            text-align: center;
            font-size: 1.3rem;
            padding: 0.6rem 0;
            color: #fff;
            font-weight: 300;
            opacity: 0.9;
            display: inline-block;
        }

        img {
            max-width: 100%;
        }

        #content {
            margin-top: 2rem;
        }
        
        .room{margin: 1rem;}

        .list-group ul {
            border: solid #f7f7f9;
        }

        .list-group ul {
            margin: 0;
            padding: 0;
        }

        .list-group li {
            position: relative;
            display: -webkit-box;
            display: -webkit-flex;
            display: -ms-flexbox;
            display: flex;
            -webkit-flex-flow: row wrap;
            -ms-flex-flow: row wrap;
            flex-flow: row wrap;
            -webkit-box-align: center;
            -webkit-align-items: center;
            -ms-flex-align: center;
            align-items: center;
            -webkit-appearance: button;
        }

        .list-group li a {
            padding: .75rem 1.25rem;
            margin-bottom: -1px;
            background-color: #fff;
            border: 1px solid rgba(0, 0, 0, .125);
        }

        .list-group li a {
            width: 100%;
            color: #464a4c;
            text-align: inherit;
        }


        .list-group li:first-child a {
            border-top-right-radius: .25rem;
            border-top-left-radius: .25rem;
        }

        .list-group li:last-child a {
            margin-bottom: 0;
            border-bottom-right-radius: .25rem;
            border-bottom-left-radius: .25rem;
        }

        .list-group li a.active {
            z-index: 2;
            color: #fff;
            background-color: #bbb18c;
            border-color: #a9933b;
        }

        .list-group li a:focus,
        .list-group li a:hover {
            color: #464a4c;
            text-decoration: none;
            background-color: #f7f7f9;
        }

        #cover {
	        display: none;
/*
            width: 100%;
            height: 100%;
            page-break-after: always;
            position: relative;
            text-align: center;
            padding-top: 40%;
*/
        }

        #cover .logo img {
            width: 10rem;
        }

        #cover ul {
            list-style-type: none;
            padding: 0;
        }

        #cover a {
            display: none;
        }

        #cover a.active {
            font-size: 6rem;
            font-weight: 300;
            color: #b6b4b4;
            position: relative;
            top: -2rem;
            display: block
        }

        #cover .heading {display: none;}

.dropdown-menu {
    right: 0;
    left: auto;
    padding: 0.5em;
}

